# dualink

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.claude/: settings.json
.claude/plans/sessions/2026-03-11-competitive-analysis/: progress.md
docs/superpowers/plans/: 2026-03-10-dualink-implementation.md
input-capture/: Cargo.toml
input-capture/src/: error.rs  lib.rs  macos.rs
input-emulation/: Cargo.toml
input-emulation/src/: lib.rs  macos.rs  macos_vhid.rs
input-event/: Cargo.toml
input-event/src/: lib.rs
lan-mouse-cli/: Cargo.toml
lan-mouse-ipc/: Cargo.toml
lan-mouse-ipc/src/: lib.rs
lan-mouse-proto/: Cargo.toml
lan-mouse-proto/src/: lib.rs
scripts/: ref-sync.sh
src/: capture.rs  clipboard_sync.rs  config.rs  connect.rs  diagnostics.rs  emulation.rs  event_coalescer.rs  keymap.rs  lib.rs  main.rs  service.rs
src/clipboard/: macos.rs  mod.rs  windows.rs
