[package]
name = "lan-mouse-proto"
description = "network protocol for dualink"
version = "0.2.0"
edition = "2021"
license = "GPL-3.0-or-later"
repository = "https://github.com/ZenAlexa/dualink"

[dependencies]
num_enum = "0.7.2"
thiserror = "2.0.0"
input-event = { path = "../input-event", version = "0.3.0" }
log = "0.4"
paste = "1.0"
